2015-02-08  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.8 release procedure:
 	Changes since nco-4_4_7: -A warn, PPC, cnk nco=rew+lfp, mabs/mebs/mibs()
	cd ~/nco;cvs tag -d nco-4_4_8;cvs tag -d nco-4_4_8-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.8 release"
	cvs tag -c nco-4_4_8;cvs tag -c nco-4_4_8-1

	* Prevent bitmasking when desired precision exceeds representable precision

	* Preserve one extra bit for NC_DOUBLE, based on empirical tests results with ppc=array(1.234567,1.e-6,$dmn)

2015-02-07  Charlie Zender  <zender@uci.edu>

	* Add pure float version of nco_var_around()

	* Bitmask-up to ones instead of down to zeros every other element to avoid bias in rounded mean

2015-02-06  Charlie Zender  <zender@uci.edu>

	* Document mabs/mebs/mibs

	* Add nco_op_typ=mabs, mebs, mibs for maximum, mean, minimum absolute value

2015-02-05  Charlie Zender  <zender@uci.edu>

	* Increase prc_bnr_xpl_rqr by 2 so prc_bnr_xpl_rqr=prc_bnr_ceil. Fixes NSD=1 for Q?? in in.nc

	* Reduce verbosity of dbg_lvl_std

	* Implement PPC in ncwa.c, ncra.c

	* Use -O3 not -O4 on clang

2015-02-04  Charlie Zender  <zender@uci.edu>

	* Document PPC efficacy in tbl_ppc_nc

	* Fix ppc used in ncpdq

2015-02-03  Charlie Zender  <zender@uci.edu>

	* Explicit cast instead of implicit coercion to squelch many MSVC warnings

	* Put string.h headers in nco_cln_utl.h

	* Add isblank() for MSVC

	* Fix nco_var_lst_add() call in ncap_lex.l to restore g++ compilation capability

	* Fix compiling problems on MSVC

2015-02-02  Charlie Zender  <zender@uci.edu>

	* Implement cnk plc_nco and cause it and map_rew to do map_rew for 3-D otherwise map_lfp

	* Optimize nco_ppc_set_var(), fail on invalid variable names

	* Fully document PPC, NSD, DSD

2015-01-31  Charlie Zender  <zender@uci.edu>

	* Specifying PPC triggers dfl_lvl=1 on netCDF4 if not otherwise set

	* Allow PPC on netCDF3

2015-01-30  Charlie Zender  <zender@uci.edu>

	* Warn on incorrect NSD input
